tests/functional/lang/parse-fail-utf8.err.exp
at «stdin»:1:5:
            1| 123 é 4
             |     ^
            2|

       error: syntax error, unexpected invalid token, expecting end of file
